[package]
name = "duners"
version = "0.0.2"
authors = ["Ben Smith <bh2smith@gmail.com>"]
edition = "2021"
description = "A simple framework for fetching query results from with [Dune Analytics API](https://dune.com/docs/api/)."
documentation = "https://docs.rs/duners"
readme = "README.md"
repository = "https://github.com/bh2smith/duners/"
license = "MIT OR Apache-2.0"
keywords = ["dune", "ethereum", "api-client", "web3", "dune-analytics"]

[features]
default = ["default-tls"]

# choose one of the below tls options
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
# TODO: there are a lot more tls options for reqwest eg rustls-tls-manual-roots-no-provider,
# but can't be arsed to support all of them rn

[dependencies]
chrono = { version = ">=0.1", default-features = false, features = ["serde"] }
dotenv = ">=0.1"
log = ">=0.1"
reqwest = { version = ">=0.1", default-features = false, features = ["json"] }
serde = { version = "^1", default-features = false, features = ["derive"] }
serde_json = "^1"
serde_with = ">=1"
tokio = { version = "^1", default-features = false, features = ["time"] }

[dev-dependencies]
test-log = "^0.2"
tokio = { version = "^1", features = ["full"] }
